fix some small layout issues

--- a/src/components/layout/common.css
+++ b/src/components/layout/common.css
@@ -55,7 +55,6 @@ body .btn-secondary,
     border-color: #404040;
     text-decoration: none;
     border-radius: 5px;
-    font-size: 13px;
     padding: 5px;
 }
 
@@ -601,11 +600,6 @@ body .gitlab-login-btn:focus {
     border: 1px solid #cb4e18;
 }
 
-body .login-btn-header,
-body .login-btn-header:hover {
-    color: white;
-    text-decoration: none;
-}
 
 body .orcid-login-btn,
 body .orcid-login-btn:hover,
